[package]
name = "bplay"
version = "1.1.1"
edition = "2024"
rust-version = "1.88.0"
license = "MIT"

[dependencies]
clap = { version = "4.5.49", features = ["cargo", "derive"] }
rodio = { version = "0.21.1", default-features = false, features = ["mp3", "playback"]}
ron = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
tar = "0.4.44"
zstd = "0.13.3"
ctrlc = { version = "3.2.3", default-features = false }
